﻿$Revision$
	$Author$ $Date$
	1. отображение креста в консольном режиме

#Revision: 1556
	Author: ctapmex Date: 2010-09-25 22:01:49 +0600 (Сб, 25 сен 2010)
	1. дополнительная проверка можно ли работать в truemod
	2. отображение креста в консольном режиме

#Revision: 1555
	Author: ctapmex Date: 2010-09-23 17:46:57 +0600 (Чт, 23 сен 2010)
	1. merge with colorer truemod

#Revision: 1554
	Author: ctapmex Date: 2010-09-22 16:04:13 +0600 (Ср, 22 сен 2010)
	1. мусор в строке возвращаемой функцией PathToFull.

#Revision: 1550
	Author: ctapmex Date: 2010-09-20 23:08:36 +0600 (Пн, 20 сен 2010)
	1. clr работает с сетевыми путями

#Revision: 1541
	Author: ctapmex Date: 2010-08-05 21:01:58 +0600 (Чт, 05 авг 2010)
	1. после выхода far 2.0 build 1625 избавляемся от хака для быстрого получения строк из редактора

#Revision: 1533
	Author: ctapmex Date: 2010-07-17 21:49:00 +0600 (Сб, 17 июл 2010)
	1. еще одно падение при вызове clr
	2. переименование функции PathToFoll. Как назавешь корабль, так и поплывёт (с).

#Revision: 1530
	Author: ctapmex Date: 2010-07-15 22:50:31 +0600 (Чт, 15 июл 2010)
	1. исправлено "окно Outliner в фильтр принимает цифры с цифровой клавиатуры"
	2. обновлен far2 sdk
	3. history.ru.txt
	4. FarColorer 1.0.2.7

#Revision: 1527
	Author: ctapmex Date: 2010-07-15 20:29:05 +0600 (Чт, 15 июл 2010)
	1. зачем перерисовывать в фаре, если мы ничего не меняли. Решает проблему мигания курсора.

#Revision: 1526
	Author: ctapmex Date: 2010-07-13 00:28:40 +0600 (Вт, 13 июл 2010)
	1. создаем editorSet только при реальной работе или открытии окна настроек
	2. инициализая указателей

#Revision: 1477
	Author: ctapmex Date: 2010-04-15 19:47:55 +0600 (Чт, 15 апр 2010)
	1. history.ru.txt
	2. FarColorer 1.0.2.6

#Revision: 1475
	Author: ctapmex Date: 2010-04-15 14:20:02 +0600 (Чт, 15 апр 2010)
	1. окно Outliner в фильтр принимает ~.
	2. ошибка работы "креста" при выборе типа раскраски

#Revision: 1468
	Author: ctapmex Date: 2010-03-18 10:12:29 +0500 (Чт, 18 мар 2010)