@@ -14,7 +14,6 @@ FarEditor::FarEditor(PluginStartupInfo *info, ParserFactory *pf)
   ret_str = NULL;
   ret_strNumber = -1;
   maxLineLength = 0;
-  fullBackground = true;
   drawCross = 2;
   showHorizontalCross = showVerticalCross = true;
   crossZOrder    = 0;
@@ -99,11 +98,6 @@ void FarEditor::reloadTypeSettings()
   newfore = def->getParamValueInt(DString("default-fore"), -1);
   newback = def->getParamValueInt(DString("default-back"), -1);
   const String *value;
-  value = def->getParamValue(DString("fullback"));
-
-  if (value != NULL && value->equals("no")){
-    fullBackground = false;
-  }
 
   value = def->getParamValue(DString("show-cross"));
   if (drawCross==2 && value != NULL){
@@ -139,11 +133,6 @@ void FarEditor::reloadTypeSettings()
   maxLineLength = ftype->getParamValueInt(DString("maxlinelength"), maxLineLength);
   newfore = ftype->getParamValueInt(DString("default-fore"), newfore);
   newback = ftype->getParamValueInt(DString("default-back"), newback);
-  value = ftype->getParamValue(DString("fullback"));
-
-  if (value != NULL && value->equals("no")){
-    fullBackground = false;
-  }
 
   value = ftype->getParamValue(DString("show-cross"));
 
@@ -535,7 +524,8 @@ int FarEditor::editorEvent(int event, void *param)
     if (drawSyntax || drawPairs){
       l1 = baseEditor->getLineRegions(lno);
     }
-
+    
+    //clean line in far editor
     addFARColor(lno, -1, 0, color());
     EditorGetString egs;
     egs.StringNumber = lno;
@@ -562,16 +552,13 @@ int FarEditor::editorEvent(int event, void *param)
 
     if (drawSyntax){
       for (; l1; l1 = l1->next){
-        if (l1->special){
+        if (l1->special || l1->end == -1){
           continue;
         }
         if (l1->start == l1->end){
           continue;
         }
-        if (l1->start > ei.LeftPos+ei.WindowSizeX){
-          continue;
-        }
-        if (l1->end != -1 && l1->end < ei.LeftPos-ei.WindowSizeX){
+        if (l1->start > ei.WindowSizeX){
           continue;
         }
 
@@ -592,28 +579,23 @@ int FarEditor::editorEvent(int event, void *param)
             continue;
           }
           //
-          int lend = l1->end;
 
-          if (lend == -1){
-            lend = fullBackground ? ei.LeftPos+ei.WindowSizeX : llen;
-          }
+          addFARColor(lno, l1->start, l1->end, col);
 
-          addFARColor(lno, l1->start, lend, col);
-
-          if (lno == ei.CurLine && (l1->start <= ei.CurPos) && (ei.CurPos <= lend)){
+          if (lno == ei.CurLine && (l1->start <= ei.CurPos) && (ei.CurPos <= l1->end)){
             delete cursorRegion;
             cursorRegion = new LineRegion(*l1);
           };
 
           // column
-          if (showVerticalCross && crossZOrder == 0 && l1->start <= ecp_cl.DestPos && ecp_cl.DestPos < lend){
+          if (showVerticalCross && crossZOrder == 0 && l1->start <= ecp_cl.DestPos && ecp_cl.DestPos < l1->end){
             col = convert(l1->styled());
 
             
             if (foreDefault(col)) col.concolor = (col.concolor&0xF0) + (vertCrossColor.concolor&0xF);
 
             if (backDefault(col)) col.concolor = (col.concolor&0xF) + (vertCrossColor.concolor&0xF0);
-            
+           
             ecp_cl.StringNumber = lno;
             ecp_cl.SrcPos = ecp.DestPos;
             info->EditorControl(ECTL_TABTOREAL, &ecp_cl);
