@@ -6,7 +6,7 @@
   Optional 
 */
 #ifdef _DEBUG
-#include<vld.h>
+//#include<vld.h>
 #endif
 
 #include<plugin.hpp>
