@@ -1,5 +1,11 @@
 ﻿$Revision$
 	$Author$ $Date$
+	1. изменена структура color 
+	2. удален параметр fullback, не актуален
+	3. оптимизация раскраски кода
+
+#Revision: 1557
+	Author: ctapmex Date: 2010-09-28 18:00:45 +0600 (Вт, 28 сен 2010)
 	1. отображение креста в консольном режиме
 
 #Revision: 1556
